# stitchmrsl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  extrinsic.json  imgui.ini  intrinsic.json  multi_camera_calibration_extrinsics.json  raw_video_gen copy.sh  stitch.py
ai_docs/: 01_offline_stitching___calibration_script__python__.md  03_stitchingpipeline__c____.md  04_synchronizedcapture_.md  05_framemetadata_.md  06_framesynchronizer_.md  index.md
docs/: 02_applicationstate__gui__.md  07_cuda_stitching_pipeline_.md
guides/: EXECUTABLES_GUIDE.md  SOURCE_CODE_GUIDE.md
include/: app.hh  async_frame_writer.hh  cuda_stitching.hh  error_handler.hh  frame_synchronizer.hh  gui.hh  stitching.hh  synchronized_capture.hh
src/: async_frame_writer.cc  cuda_stitching_pipeline.cc  cuda_stitching_pipeline_old.cc  error_handler.cc  frame_synchronizer.cc  gui.cc  main.cc  render.cc  rtsp_stitcher.cc  rtsp_stitcher_old.cc  stitching.cc  synchronized_capture.cc  video_rectifier.cc
